# cuda-optimizations

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
notebooks/: attention_benchmark.ipynb  memory_benchmark.ipynb
scripts/: run_benchmarks.sh
src/cuda/: attention.cu  memory_optimization.cu  reduction.cu
src/include/: cuda_utils.h
src/python/: benchmarks.py  cuda_ops.py
